cut off content fix

--- a/zero-to-jr/styles/_globals.scss
+++ b/zero-to-jr/styles/_globals.scss
@@ -211,11 +211,9 @@ a {
 }
 
 .comparison{
-  display: flex;
-  flex-direction: row;
-  @media screen and (max-width:600px) {
-    flex-direction: column;
-  }
+  display: flex; 
+  flex-direction: column; 
+  align-items: center;
 }
 .comparison-block{
   margin: 1rem;
